refactored ; added append option

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/example/bin/Debug/netcoreapp3.0/example.dll",
+            "program": "${workspaceFolder}/examples/example-01/bin/Debug/netcoreapp3.0/example-01.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/example",
+            // "cwd": "${workspaceFolder}/example",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
