--- a/examples/example-03/example-03.csproj
+++ b/examples/example-03/example-03.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\netcore-csv\netcore-csv.csproj" />    
+    <ProjectReference Include="..\..\netcore-csv\netcore-csv.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+    <RootNamespace>example_03</RootNamespace>
   </PropertyGroup>
 
 </Project>
