--- a/examples/example-01/example-01.csproj
+++ b/examples/example-01/example-01.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <RootNamespace>example_01</RootNamespace>
   </PropertyGroup>
 
