--- a/examples/example-02/example-02.csproj
+++ b/examples/example-02/example-02.csproj
@@ -6,7 +6,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>example_02</RootNamespace>
   </PropertyGroup>
 
